@@ -378,6 +378,9 @@ Documentation
 Tests
 -----
 
+- Issue #7312: Add a -F flag to run the selected tests in a loop until
+  a test fails.  Can be combined with -j.
+
 - Issue #6551: test_zipimport could import and then destroy some modules of
   the encodings package, which would make other tests fail further down
   the road because the internally cached encoders and decoders would point
